Completed exercise.. still need work on doing it without checking solution. I understand the concept, but still fiddling around with getting everything aligned correctly

--- a/flex/03-flex-header-2/style.css
+++ b/flex/03-flex-header-2/style.css
@@ -12,6 +12,11 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display: flex;
+  justify-content:space-between;
+  align-items: center;
+  padding: 5px;
+
 }
 
 .profile-image {
@@ -27,6 +32,7 @@ body {
   font-size: 32px;
   font-weight: 900;
   font-style: italic;
+  /* display: flex; */
 }
 
 button {
@@ -45,4 +51,23 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin: 0px;
+  padding: 10px;
+  gap: 15px;
+}
+
+
+.leftnav {
+  display: flex;
+  /* justify-content: flex-start; */
+  align-items: center;
+
+}
+
+.rightnav { 
+  display: flex;
+  /* justify-content: flex-end; */
+  gap: 15px;
+  
 }
